[package]
name = "node-debug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.26.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.13.0"
clap = { version = "3.1.9", features = ["derive"] }
rustyline = "9.1.2"
sourcemap = "*"
